// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createConfig creates a new config file 1`] = `
Array [
  Array [
    "root-path/esmbly.config.js",
    "config-module-source",
    Object {
      "overwrite": false,
    },
  ],
]
`;

exports[`createConfig creates a new config file with default values when passing the default option 1`] = `
Array [
  Array [
    "root-path/esmbly.config.js",
    "module.exports = {
  input: [],
  output: [],
  transformers: [],
};
",
    Object {
      "overwrite": false,
    },
  ],
]
`;

exports[`createConfig throws an error if there already is a config file 1`] = `"Config root-path/esmbly.config.js already exists. Remove that file first."`;

exports[`getTemplateConfig resolves to the correct template config 1`] = `Promise {}`;
